k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-demo-app-deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: docker-demo-app
    spec:
      containers:
        - name: docker-demo-cont
          image: frostfrost/dockerfirstapp
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 5
