k8s/service.yaml
apiVersion: apps/v1
kind: Service
metadata:
  name: docker-demo-service
spec:
  selector:
    app: docker-demo-app
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
